# tracefork

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPIKE0.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  mutation.yml  release.yml
docs/: packaging-decisions.md  plugin-api.md  session-cross-tape-design-spike.md
examples/: demo_report.py
examples/plugin_example/: README.md  pyproject.toml
examples/plugin_example/plugin_example/: __init__.py  matcher.py
experiments/: validation_report_committed.json
experiments/replay_fixtures/: manifest.json  single_turn.tape.sqlite  two_turn.tape.sqlite
scripts/: check_executed_evidence.py  e2e.sh  gen_replay_fixtures.py  mutation.sh  mutation_summary.py
src/tracefork/: __init__.py  archetypes.py  basis.py  bedrock_transport.py  bench.py  blame.py  boundary_guard.py  bundle.py  certificate.py  checkpoint.py  checkpoint_stream.py  ci_calibration.py  cli.py  competing_faults.py  concurrent_validate.py  config.py  confinement_diagnostics.py  constants.py  convergence.py  corpus.py  cost_profile.py  coverage.py  cross_tape_blame.py  diff.py  divergence.py  effects.py  eventstream.py  faults.py  field_oracle.py  fixtures.py  fork.py  fork_allowlist.py  fsck.py  interop.py  judge.py  live.py  locate.py  matcher.py  mcp_client.py  narrative.py  (+31 more)
src/tracefork/adapters/: __init__.py  adk.py  autogen.py  base.py  crewai.py  langchain.py  openai_agents.py  shepherd.py
src/tracefork/data/: pricing.json
src/tracefork/providers/: __init__.py  anthropic.py  base.py  bedrock.py  gemini.py  openai.py
src/tracefork_spike/: __init__.py  __main__.py  agent.py  fake_llm.py  nondet.py  spike.py  tape.py  transport.py
tests/: fakes.py  required_test_ids.txt  test_adapter_fork_blame_parity.py  test_adapters_adk.py  test_adapters_autogen.py  test_adapters_base.py  test_adapters_crewai.py  test_adapters_langchain.py  test_adapters_openai_agents.py  test_adapters_shepherd.py  test_archetypes.py  test_basis.py  test_bedrock_eventstream.py  test_bedrock_provider.py  test_bedrock_transport.py  test_bench.py  test_blame.py  test_blame_heatmap.py  test_boundary_guard.py  test_branch_queries.py  test_bundle.py  test_causal_edges.py  test_certificate.py  test_check_executed_evidence.py  test_checkpoint.py  test_checkpoint_stream.py  test_ci_calibration.py  test_cli.py  test_cli_session_board.py  test_cli_smoke.py  test_competing_faults.py  test_concurrency.py  test_concurrent_validate.py  test_config.py  test_confinement_diagnostics.py  test_confinement_risk.py  test_confinement_tier.py  test_convergence.py  test_corpus.py  test_cost_profile.py  (+66 more)
tests/fixtures/: fork_ui_agent.py  legacy_tape_v1.blob
web/: report.html  runs.html  session_report.html
