[project]
name = "tracefork"
version = "0.1.0"
description = "Time-travel debugger for AI agents: bit-exact record/replay, fork any step, causal blame with confidence intervals."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "zstandard>=0.22",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Pratik Soni", email = "godofcode.pratik@gmail.com" }]
keywords = [
    "ai-agents", "llm", "debugging", "time-travel-debugger", "record-replay",
    "causal-inference", "anthropic", "observability", "determinism",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]
# Optional: the OpenAI / Google Gemini SDKs are only needed for live record/replay
# against those providers. The adapters parse raw wire JSON/bytes, so offline
# tests never import them — they are NOT hard dependencies.
providers = [
    "openai>=1.0",
    "google-genai>=0.3",
]
# Optional: the MCP (Model Context Protocol) SDK, only needed to record/replay a
# live MCP client (stdio / Streamable-HTTP). The tool seam parses raw JSON-RPC
# frames, so offline tests never import it — it is NOT a hard dependency.
mcp = [
    "mcp>=1.0",
]
# Optional: LangChain / LangGraph, only needed to bind a *live* framework run to
# tracefork's transport seam (record) or replay a graph from a tape. The adapter
# guards every framework import, so `import tracefork` and the whole offline test
# suite work with none of these installed — they are NOT hard dependencies. Pin
# ranges are conservative (these packages churn fast); widen as versions are
# validated against the adapter.
frameworks = [
    "langchain-core>=1.4,<2",
    "langchain-openai>=1.3,<2",
    "langchain-anthropic>=1.4,<2",
    "langgraph>=1.2,<2",
]
# Optional: structlog JSON logging + OTel self-instrumentation of
# record/replay/fork/blame (see observability.py). Export/ingest of OTel
# GenAI / OpenInference data (interop.py) needs NEITHER of these — it produces
# and consumes plain JSON dicts, so that path works with the core install.
observability = [
    "structlog>=24.1",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[project.scripts]
tracefork = "tracefork.cli:app"

[project.urls]
Homepage = "https://github.com/pratik916/tracefork"
Repository = "https://github.com/pratik916/tracefork"
Issues = "https://github.com/pratik916/tracefork/issues"
Changelog = "https://github.com/pratik916/tracefork/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracefork_spike", "src/tracefork"]

# Ship the single-file web UI inside the package so `report` and `serve` work from
# an installed wheel, not only from an editable/source checkout.
[tool.hatch.build.targets.wheel.force-include]
"web/report.html" = "tracefork/web/report.html"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.12"
files = ["src/tracefork"]
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src/tracefork", "src/tracefork_spike"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 75
