[project]
name = "tracefork"
version = "0.3.0"
description = "Time-travel debugger for AI agents: bit-exact record/replay, fork any step, causal blame with confidence intervals."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "zstandard>=0.22",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Pratik Soni", email = "godofcode.pratik@gmail.com" }]
keywords = [
    "ai-agents", "llm", "debugging", "time-travel-debugger", "record-replay",
    "causal-inference", "anthropic", "observability", "determinism",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    # Property-based fuzzing (tests/test_property_*.py) proving Tape round-trip
    # digest stability, digest() metadata-exclusion, and IdentityMatcher's
    # fingerprint contract over generated inputs, not just fixed-input pins.
    # Test-only: never imported by src/tracefork.
    "hypothesis>=6",
]
# Optional: the OpenAI / Google Gemini SDKs are only needed for live record/replay
# against those providers. The adapters parse raw wire JSON/bytes, so offline
# tests never import them — they are NOT hard dependencies.
providers = [
    "openai>=1.0",
    "google-genai>=0.3",
]
# Optional: boto3 (and its botocore dependency), only needed to record/replay
# against a REAL AWS Bedrock client. bedrock_transport.py's seam is duck-typed
# against whatever prepared-request/event-emitter object it's handed and never
# imports botocore itself (one guarded, best-effort exception — see its module
# docstring), so `import tracefork` and the whole offline test suite —
# including the Bedrock tests — run with boto3 NOT installed. Not in the `dev`
# extra: the offline synthetic seam (`synthetic.py`'s botocore-shaped fakes)
# proves the contract without it.
bedrock = [
    "boto3>=1.34",
]
# Optional: the MCP (Model Context Protocol) SDK, only needed to record/replay a
# live MCP client (stdio / Streamable-HTTP). The tool seam parses raw JSON-RPC
# frames, so offline tests never import it — it is NOT a hard dependency.
mcp = [
    "mcp>=1.0",
]
# Optional: LangChain / LangGraph, only needed to bind a *live* framework run to
# tracefork's transport seam (record) or replay a graph from a tape. The adapter
# guards every framework import, so `import tracefork` and the whole offline test
# suite work with none of these installed — they are NOT hard dependencies.
# Floors only (no `<2` cap): LangChain 1.0 GA commits to no breaking changes
# until 2.0, so a `<2` cap is speculative AND useless against the real failure
# mode — intra-1.x patch regressions (e.g. langgraph-prebuilt 1.0.2/1.0.5/1.0.9)
# ship *inside* the allowed range, so only CI-against-latest (+ a targeted `!=`
# if a bad release is ever confirmed) actually catches those, not a major cap.
frameworks = [
    "langchain-core>=1.4",
    "langchain-openai>=1.3",
    "langchain-anthropic>=1.4",
    "langgraph>=1.2",
]
# Optional: the OpenAI Agents SDK, only needed to bind a *live* Agents SDK run's
# underlying openai client to tracefork's transport seam (`adapters/openai_agents.py`),
# or to install its tracing core as a real TracingProcessor. The adapter guards
# every import, so `import tracefork` and the whole offline test suite work with
# it NOT installed. CAP: 0.x pre-stable API, and the adapter injects into
# private/undocumented internals — the cap is a hint, not a guard; CI-against-
# latest is the real guard. TODO(caps): test newest major each release and widen.
"openai-agents" = [
    "openai-agents>=0.10,<1",
]
# Optional: CrewAI, only needed for the real `crewai_event_bus` listener
# (`adapters/crewai.py`'s `make_event_listener`); `bind()` itself never imports
# crewai or litellm (duck-typed against whatever module-like object it's
# handed), so `import tracefork` and the whole offline test suite work with
# neither installed. litellm — the actual httpx chokepoint `bind()` targets —
# is crewai's own transitive dependency, so it is not pinned separately here.
# CAP: the adapter hooks LiteLLM's private `client_session`/`aclient_session`
# internals — the cap is a hint, not a guard; CI-against-latest is the real
# guard. TODO(caps): test newest major each release and widen.
crewai = [
    "crewai>=1.0,<2",
]
# Optional: autogen-core (the InterventionHandler message-level seam) +
# autogen-ext (the OpenAIChatCompletionClient model wrapper `bind()` targets),
# only needed to exercise `adapters/autogen.py` against the real framework.
# Both imports are guarded, so `import tracefork` and the whole offline test
# suite work with neither installed. CAP: genuinely experimental/pre-stable
# (ground-up async rewrite) — the cap is a hint, not a guard; CI-against-latest
# is the real guard. TODO(caps): test newest major each release and widen.
autogen = [
    "autogen-core>=0.7,<1",
    "autogen-ext>=0.7,<1",
]
# Optional: google-adk (the Google Agent Development Kit), only needed to bind a
# *live* ADK LlmAgent/Runner's underlying google-genai client to tracefork's
# transport seam (`adapters/adk.py`), or to install its BasePlugin as a real
# ADK plugin. google-adk pulls in google-genai transitively (it already pins
# `google-genai>=2.8,<3`), so it is not pinned separately here. Both imports
# are guarded, so `import tracefork` and the whole offline test suite work
# with neither installed. CAP: stable (not pre-1.0) but fast major cadence +
# adapter-internal coupling — the cap is a hint, not a guard; CI-against-latest
# is the real guard. TODO(caps): test newest major each release and widen.
adk = [
    "google-adk>=2.3,<3",
]
# Optional: structlog JSON logging + OTel self-instrumentation of
# record/replay/fork/blame (see observability.py). Export/ingest of OTel
# GenAI / OpenInference data (interop.py) needs NEITHER of these — it produces
# and consumes plain JSON dicts, so that path works with the core install.
observability = [
    "structlog>=24.1",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]
# Optional: mutmut, only needed for the offline, informational mutation-testing
# pass (scripts/mutation.sh / scripts/mutation_summary.py) over transport.py/
# tape.py/matcher.py/blame.py — kept separate from `dev` so the default
# `uv sync --extra dev` contributor path and CI stay unaffected; only the
# nightly-only mutation.yml workflow (never push/pull_request) installs it.
mutation = [
    "mutmut>=2.4",
]
# Curated convenience extra: the stable-wire / self-instrumentation family in one
# shot. DELIBERATELY excludes the fast-moving framework stacks (frameworks,
# openai-agents, crewai, autogen, adk) and dev — unioning five independently-capped
# frameworks would make `all` a single all-or-nothing resolution target. Self-
# referential extra (hatchling flattens it into concrete Requires-Dist at build).
all = ["tracefork[providers,bedrock,mcp,observability]"]

[project.scripts]
tracefork = "tracefork.cli:app"

[project.urls]
Homepage = "https://github.com/pratik916/tracefork"
Repository = "https://github.com/pratik916/tracefork"
Issues = "https://github.com/pratik916/tracefork/issues"
Changelog = "https://github.com/pratik916/tracefork/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracefork_spike", "src/tracefork"]

# Ship the single-file web UI inside the package so `report` and `serve` work from
# an installed wheel, not only from an editable/source checkout.
[tool.hatch.build.targets.wheel.force-include]
"web/report.html" = "tracefork/web/report.html"
"web/runs.html" = "tracefork/web/runs.html"
"web/session_report.html" = "tracefork/web/session_report.html"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.12"
files = ["src/tracefork"]
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src/tracefork", "src/tracefork_spike"]
branch = true

[tool.coverage.report]
show_missing = true
# 75 -> 80: the cross-module E2E suite (tests/test_e2e.py, tests/test_cli_smoke.py)
# lifted measured coverage to ~91% (was ~88.5%) -- comfortably clearing 80, with
# headroom left deliberately unclaimed rather than pinning a floor we're not sure
# to keep clearing as the codebase grows.
fail_under = 80

[tool.mutmut]
paths_to_mutate = [
    "src/tracefork/transport.py",
    "src/tracefork/tape.py",
    "src/tracefork/matcher.py",
    "src/tracefork/blame.py",
]
tests_dir = "tests/"
runner = "python -m pytest -x -q"
